--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -736,3 +736,10 @@ masid = {694811}
   pages={91--94},
   year={1960}
 }
+
+@book{lueker1982average,
+  title={On the average difference between the solutions to linear and integer knapsack problems},
+  author={Lueker, George S},
+  year={1982},
+  publisher={Springer}
+}
