--- a/doc/relatorios/report-20141119-kp-backtrack/report.tex
+++ b/doc/relatorios/report-20141119-kp-backtrack/report.tex
@@ -11,7 +11,7 @@
 \newtheorem{mydef}{Definition}
 \let\emph\textbf
 
-\title{A study of two exact algorithms for the knapsack problem}
+\title{A brief survey on two exact algorithms for the knapsack problem}
 \author{Marcos Daniel Baroni}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -138,7 +138,7 @@ Figure~\ref{fig:experiment} shows experimental results on the number of partial
 solutions computed by the backtrack algorithm.
 The continuous line is the average number over 1000 random instances,
 the dotted line is the total number of possible solutions and
-the dashed line is the conjectured curve for the observed experimental results;
+the dashed line is the conjectured curve for the observed experimental result;
 (a) shows the number of computed solutions to find the optimal solution and
 (b) shows the number of computed solutions to prove its optimality.
 
