--- a/doc/pubs/IEEE-CEC2015/paper.tex
+++ b/doc/pubs/IEEE-CEC2015/paper.tex
@@ -10,6 +10,11 @@
 
 \begin{document}
 
+\section{Intro}
+\section{THE SFL}
+\section{The SFL for MKP}
+\section{Experiments em results}
+\section{Conclusions}
 
 \printbibliography
 
