--- a/doc/pubs/IEEE-CEC2015/paper.tex
+++ b/doc/pubs/IEEE-CEC2015/paper.tex
@@ -11,7 +11,16 @@
 \begin{document}
 
 \section{Intro}
+% motivate the MKP
+% Define the MKP
+% recent works on MKP
+% motivar busca por novos algoritmos
+% comentar um pouco sobre o SFL
+
 \section{THE SFL}
+% introduzir o SFL
+%
+
 \section{The SFL for MKP}
 \section{Experiments em results}
 \section{Conclusions}
