--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -743,3 +743,78 @@ masid = {694811}
   year={1982},
   publisher={Springer}
 }
+
+@article{horng2014construction,
+  title={The construction of a support vector machine using the shuffled frog-leaping algorithm},
+  author={Horng, MH and Chao, CF and Chai, HZ},
+  journal={Computer Science and Systems Engineering},
+  volume={68},
+  pages={67},
+  year={2014},
+  publisher={WIT Press}
+}
+
+@article{bhattacharjee2014shuffled,
+  title={Shuffled frog leaping algorithm and its application to 0/1 knapsack problem},
+  author={Bhattacharjee, Kaushik Kumar and Sarmah, Sarada Prasad},
+  journal={Applied Soft Computing},
+  volume={19},
+  pages={252--263},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{xu2013effective,
+  title={An effective shuffled frog-leaping algorithm for solving the hybrid flow-shop scheduling problem with identical parallel machines},
+  author={Xu, Ye and Wang, Ling and Wang, Shengyao and Liu, Min},
+  journal={Engineering Optimization},
+  volume={45},
+  number={12},
+  pages={1409--1430},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@article{fang2012effective,
+  title={An effective shuffled frog-leaping algorithm for resource-constrained project scheduling problem},
+  author={Fang, Chen and Wang, Ling},
+  journal={Computers \& Operations Research},
+  volume={39},
+  number={5},
+  pages={890--901},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{luo2014improved,
+  title={Improved Shuffled Frog Leaping Algorithm and its multi-phase model for multi-depot vehicle routing problem},
+  author={Luo, Jianping and Chen, Min-Rong},
+  journal={Expert Systems with Applications},
+  volume={41},
+  number={5},
+  pages={2535--2545},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{eusuff2003optimization,
+  title={Optimization of water distribution network design using the shuffled frog leaping algorithm},
+  author={Eusuff, Muzaffar M and Lansey, Kevin E},
+  journal={Journal of Water Resources Planning and Management},
+  volume={129},
+  number={3},
+  pages={210--225},
+  year={2003},
+  publisher={American Society of Civil Engineers}
+}
+
+@article{eusuff2006shuffled,
+  title={Shuffled frog-leaping algorithm: a memetic meta-heuristic for discrete optimization},
+  author={Eusuff, Muzaffar and Lansey, Kevin and Pasha, Fayzul},
+  journal={Engineering Optimization},
+  volume={38},
+  number={2},
+  pages={129--154},
+  year={2006},
+  publisher={Taylor \& Francis}
+}
