mkp-sfl imprimindo tempo agora.

--- a/doc/pubs/IEEE-CEC2015/paper.tex
+++ b/doc/pubs/IEEE-CEC2015/paper.tex
@@ -94,14 +94,13 @@ results.
 \section{The shuffled frog leaping}
 \label{sec:sfla}
 
-The SFLA is a metaheuristic to solve discrete and combinatorial problems.
-It is based on hte memetics of living beings and recalls the behavior of a
+The SFLA is a metaheuristic to solve discrete and combinatorial problems
+based on the memetics of living beings and recalls the behavior of a
 group of frogs searching for the location that has the maximum amount of available food.
 In the following subsections we present the concepts of SCE and PSO to finally
 present the shuffled frog leaping algorithm.
 
 \subsection{The shuffled complex evolution}
-
 
 \subsection{The particle swarm optimization}
 \subsection{The shuffled frog leaping algorithm}
