--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -699,6 +699,17 @@ masid = {694811}
   organization={ACM}
 }
 
+@article{beier2006experimental,
+  title={An experimental study of random knapsack problems},
+  author={Beier, Rene and V{\"o}cking, Berthold},
+  journal={Algorithmica},
+  volume={45},
+  number={1},
+  pages={121--136},
+  year={2006},
+  publisher={Springer}
+}
+
 @article{nemhauser1969discrete,
   title={Discrete dynamic programming and capital allocation},
   author={Nemhauser, George L and Ullmann, Zev},
