--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -829,3 +829,15 @@ masid = {694811}
   year={2006},
   publisher={Taylor \& Francis}
 }
+
+@article{duan1992effective,
+  title={Effective and efficient global optimization for conceptual rainfall-runoff models},
+  author={Duan, Qingyun and Sorooshian, Soroosh and Gupta, Vijai},
+  journal={Water resources research},
+  volume={28},
+  number={4},
+  pages={1015--1031},
+  year={1992},
+  publisher={Wiley Online Library}
+}
+
