--- a/doc/pubs/IEEE-CEC2015/paper.tex
+++ b/doc/pubs/IEEE-CEC2015/paper.tex
@@ -1,10 +1,12 @@
-\documentclass[conference, compsocconf]{IEEEtran}
+\documentclass[10pt,conference, compsocconf]{IEEEtran}
 
 \usepackage{amsfonts}
 \usepackage{amssymb,amsmath}
 \usepackage{hyperref}
 \usepackage{algpseudocode}
 \usepackage{graphicx}
+\usepackage{anyfontsize}   % for fontsize and selectfont command
+\usepackage{array}         % better padding of cell content of tabulars
 \usepackage[skip=2pt,font=footnotesize]{caption}
 
 \usepackage{tikz}       % for flowcharts
@@ -21,7 +23,7 @@
 
 \begin{document}
 
-\title{A shuffled frog leaping algorithm for
+\title{A shuffled complex evolution algorithm for
 the multidimensional knapsack problem}
 
 \author{\IEEEauthorblockN{Marcos Daniel Valad\~ao Baroni}
@@ -40,9 +42,18 @@ Email: fvarejao@ninfa.inf.ufes.br }
 \maketitle
 
 \begin{abstract}
-%\boldmath
-The abstract goes here.
+This work addresses the application of
+a population based evolutionary algorithm
+called shuffled complex evolution (SCE) in the multidimensional knapsack
+problem.
+The SCE regards a natural evolution happening simultaneously in independent communities.
+The performance of the SCE algorithm is verified through computational experiments
+using well-known problems from literature and randomly generated problem as well.
+The SCE proved to be very effective in finding good solutions demanding a
+very small amount of processing time.
+
 \end{abstract}
+\IEEEpeerreviewmaketitle
 
 \section{Introduction}
 \label{sec:intro}
@@ -58,7 +69,7 @@ defined as follows:
 \end{align*}
 
 % Define the MKP
-The problem can be interpreted as a set of $n$ itens with profits $p_j$
+The problem can be interpreted as a set of $n$ items with profits $p_j$
 and a set of $m$ resources with capacities $c_i$.
 Each item $j$ consumes an amount $w_{ij}$ from each resource $i$, if selected.
 The objective is to select a subset of items with maximum total profit,
@@ -84,9 +95,11 @@ to verify the efficiency of novel metaheuristics.
 
 In this paper we address the application of a metaheuristic called
 shuffled complex evolution (SCE) to the multidimensional knapsack problem.
-The SCE is a metaheuristic (~\cite{duan1992effective})
+The SCE is a metaheuristic, proposed by Duan in \cite{duan1992effective},
 which combines the ideas of a controlled random search with the concepts
 of competitive evolution and shuffling.
+The SCE algorithm has been successfully used to solve several problems
+like flow shop scheduling~\cite{zhao2014shuffled} and project management~\cite{elbeltagi2007modified}.
 
 The reminder of the paper is organized as follows:
 Section~\ref{sec:sce} presents the shuffled complex evolution algorithm
@@ -106,9 +119,9 @@ results.
 
 %\label{sec:sfla-mkp}
 
-The shuffled complex evolution (\cite{duan1992effective}) is a population
+The shuffled complex evolution is a population
 based evolutionary optimization algorithm that regards a natural 
-evolution happenning simultaneously in independent communities.
+evolution happening simultaneously in independent communities.
 The algorithm works with a population partitioned in $N$ complexes, each one
 having $M$ individuals.
 In the next Subsection the SCE is explained in more details.
@@ -127,7 +140,7 @@ In the SCE a population of $N*M$ individuals is randomly taken from the
 feasible solution space.
 After this initializing the population is sorted by descending order according
 to their fitness and the best global solution is identified.
-The entire population is then partitioned (suffled) into $N$ complexes,
+The entire population is then partitioned (shuffled) into $N$ complexes,
 each containing $M$ individuals.
 In this shuffling process the first individual goes to the first complex, the second
 individual goes to the second complex, individual $N$ goes to $N$-th complex,
@@ -151,7 +164,7 @@ of the complex is considered for a crossing.
 If the latter crossing did not result in any improvement, the best individual
 of whole population is considered.
 Finally, if all the crossing steps couldn't generate a better individual,
-the worst individual of subcomplex is replaced by a new random solution taken
+the worst individual of the subcomplex is replaced by a new random solution taken
 from the feasible solution space.
 This last step is important to prevent the algorithm becoming trapped in local minima.
 Fig.~\ref{fig:flow2} presents the procedure described above in a flowchart diagram.
@@ -215,7 +228,7 @@ After trying to place all available items the new solution is returned.
     \State $v \leftarrow $ shuffle($1, 2, \ldots, n$)
     \For{$ i \leftarrow 1:c$ }
 	  \State $j \leftarrow v_i$
-	  \State $x^w_j \leftarrow x^b_j$ \Comment{ carriage of gene}
+	  \State $x^w_j \leftarrow x^b_j$ \Comment{gene carriage}
 	\EndFor
 	\If{$s^w$ is not feasible}
 	  \State repair $s^w$
@@ -230,16 +243,16 @@ After trying to place all available items the new solution is returned.
 
 The crossing procedure (Fig.~\ref{alg:cross}) takes as input the worst
 solution taken from the subcomplex $x^w = (x^w_1, x^w_2, \ldots, x^w_n$),
-the selected better solution $x_b = (x^b_1, x^b_2, \ldots, x^b_n$),
+the selected better solution $x_b = (x^b_1, x^b_2, \ldots, x^b_n$)
 and the number $c$ of genes that will be carried from the better solution.
 The $c$ parameter will control how similar the worst individual will be from the
-given better individual
+given better individual.
 At first the items are shuffled in random order and stored in a list (line 2).
-Then $c$ chosen genes are now carried from the better individual to the worst
+Then $c$ randomly chosen genes are carried from the better individual to the worst
 individual (line 5).
 At the end of steps the feasibility of the solution is checked (line 7) and
 the solution is repaired if needed.
-The repair stage is a greedy that iteratively removes the item that less
+The repair stage is a greedy procedure that iteratively removes the item that less
 decreases the objective function.
 Finally the fitness of the generated solution is updated (line 10) and
 returned (line 11).
@@ -299,12 +312,12 @@ returned (line 11).
 For the computational experiments a batch of tests was driven to find the best
 parameters for the problem.
 Afterwards two main tests was considered:
-(a) using the well-known set of problems defined by Chu and Beasly (\cite{Chu-Beasley-1998})
+(a) using the well-known set of problems defined by Chu and Beasley (\cite{Chu-Beasley-1998})
 and (b) a large set of randomly generated instances using uniform distribution.
 
-\subsection{The Chu-Beasly instances}
+\subsection{The Chu-Beasley instances}
 
-The set of MKP instances provided by Chu and Beasly was generated using a
+The set of MKP instances provided by Chu and Beasley was generated using a
 procedure suggested by Freville and Plateau~\cite{freville1994efficient}, which
 attempts to generate instances hard to solve.
 The number of constraints $m$ varies among $5$, $10$ and $30$, and the number
@@ -326,30 +339,158 @@ The profit $p_j$ of the items were correlated to $w_{ij}$ and generated as follo
 
 The second set of instances is composed by problems generated using a similar
 setup.
-The only difference is that the profit $p_j$ is also drawn from a discrete uniform
+The only differences is that the profit $p_j$ is also drawn from a discrete uniform
 distribution $U(0, 1000)$.
 For each combination of $(m, n, \alpha)$ parameter, $600$ random problems was
 generated, totaling $16200$ problems.
 
-% a set of large MKP instances using the procedure suggested by Freville and
-% Plateau (1994). The number of constraints m was set to 5, 10 and 30, and the number of
-% variables n was set to 100, 250 and 500. Thirty problems were generated for each m-n
-% combination, giving a total of 270 problems.
+\subsection{Experimental results}
 
-% where q j is a real number drawn from the continuous uniform generator U (0, 1). In
-% general, correlated problems are more difficult to solve than uncorrelated problems (Gavish
-% and Pirkul (1985), Pirkul (1987)).
+All the experiments was run on a Intel$^R$ Core i5-3570 CPU @3.40GHz computer
+with 4GB of RAM.
+The SCE algorithm for MKP was implemented in C programming language.
+For the set of random instance all best known solution was found by the solver
+SCIP 3.0.1 running for at least 10 minutes.
 
-% Instancias (tightness)
-% parametros
-% Gráficos:
-%   - qualidade
-%   - gráfico exemplificando o progresso durante as iterações.
-% Futuro: testar cuzamentos de tipos diferentes e com mais individuos.
+After a previous test batch the following parameters for SCE was defined and used
+in all executions of SCE:
+\begin{itemize}
+  \item $N = 20$: number of complexes;
+  \item $M = 20$: number of individuals in each complex;
+  \item $P = 5$: number of individuals in each subcomplex;
+  \item $K = 300$: number of algorithm iterations;
+  \item $K' = 20$: number of iterations used in the complex evolving process;
+  \item $c = n/5$: number of genes carried from parent in crossing process.
+\end{itemize}
+
+Table~\ref{tab:chu} shows the performance of the SCE on the Chu-Beasley set of instance.
+Each instance in the set was executed 10 times on SCE.
+The \textit{SCE time} column shows the average execution time of SCE algorithm.
+The \textit{gap} column shows the average ratio of the solution found by SCE and
+the best known solution of each instance.
+It can be observed that the SCE has a fast convergence speed, achieving high
+quality solutions in few seconds.
+
+\begin{table}
+{
+\renewcommand{\arraystretch}{1.5}%
+\fontsize{8.5pt}{1em}\selectfont 
+\begin{center}
+\begin{tabular}{|r|r|r|rr|} \hline
+\textbf{n}   & \textbf{m}  & \textbf{$\alpha$} & \textbf{SCE time (s)} & \textbf{gap (\%)} \\ \hline
+100 & 5 & 0.25 & 0.79 & 96.5 \\
+    &   & 0.5 & 0.81 & 97.4 \\
+    &   & 0.75 & 0.83 & 98.9 \\ \cline{2-5}
+    & 10 & 0.25 & 0.75 & 95.7 \\
+    &    & 0.5 & 0.93 & 96.7 \\
+    &    & 0.75 & 0.89 & 98.5 \\ \cline{2-5}
+    & 30 & 0.25 & 1.01 & 95.4 \\
+    &    & 0.5 & 1.07 & 96.4 \\
+    &    & 0.75 & 0.99 & 98.2 \\ \cline{2-5}
+    & \multicolumn{3}{r}{\textbf{average gap}}  & $\bf 97.1$  \\ \hline \hline
+\textbf{n}   & \textbf{m}  & \textbf{$\alpha$} & \textbf{SCE time (s)} & \textbf{gap (\%)} \\ \hline
+250 & 5 & 0.25 & 1.72 & 93.2 \\
+    &   & 0.5 & 1.75 & 94.9 \\
+    &   & 0.75 & 1.78 & 97.6 \\ \cline{2-5}
+    & 10 & 0.25 & 1.84 & 93.1 \\
+    &    & 0.5 & 1.84 & 94.6 \\
+    &    & 0.75 & 1.81 & 97.2 \\ \cline{2-5}
+    & 30 & 0.25 & 2.21 & 93.2 \\
+    &    & 0.5 & 2.21 & 94.2 \\
+    &    & 0.75 & 2.31 & 96.6 \\ \cline{2-5}
+    & \multicolumn{3}{r}{\textbf{average gap}}  & $\bf 95.0$  \\ \hline \hline
+\textbf{n}   & \textbf{m}  & \textbf{$\alpha$} & \textbf{SCE time (s)} & \textbf{gap (\%)} \\ \hline
+500 & 5 & 0.25 & 3.16 & 91.4 \\
+    &   & 0.5 & 3.18 & 93.4 \\
+    &   & 0.75 & 3.34 & 96.4 \\ \cline{2-5}
+    & 10 & 0.25 & 3.39 & 91.7 \\
+    &    & 0.5 & 3.37 & 93.1 \\
+    &    & 0.75 & 3.44 & 96.2 \\ \cline{2-5}
+    & 30 & 0.25 & 3.83 & 91.4 \\
+    &    & 0.5 & 3.90 & 92.6 \\
+    &    & 0.75 & 3.99 & 96.0 \\ \cline{2-5}
+    & \multicolumn{3}{r}{\textbf{average gap}}  & $\bf 93.6$  \\ \hline
+\end{tabular}
+\end{center}
+}
+ \caption{SCE performance on Chu-Beasley problems.}
+ \label{tab:chu}
+\end{table}
+
+\begin{table}
+{
+\renewcommand{\arraystretch}{1.5}%
+\fontsize{8.5pt}{1em}\selectfont 
+\begin{center}
+\begin{tabular}[c]{|r|r|r|rrr|} \hline
+\textbf{n}   & \textbf{m}  & \textbf{$\alpha$}    &\textbf{SCIP time (s)}& \textbf{SCE time (s)} & \textbf{gap (\%)} \\ \hline
+100 & 10 & 0.25 & $  0.93$ & $  0.41$  & $98.3$ \\
+    &    & 0.50 & $  0.28$ & $  0.39$  & $99.3$ \\
+    &    & 0.75 & $  0.09$ & $  0.37$  & $99.8$ \\ \cline{2-6}
+    & 20 & 0.25 & $  3.15$ & $  0.41$  & $98.2$ \\
+    &    & 0.50 & $  0.71$ & $  0.40$  & $99.3$ \\
+    &    & 0.75 & $  0.16$ & $  0.37$  & $99.8$ \\ \cline{2-6}
+    & 30 & 0.25 & $  7.26$ & $  0.42$  & $98.3$ \\
+    &    & 0.50 & $  1.47$ & $  0.42$  & $99.3$ \\
+    &    & 0.75 & $  0.25$ & $  0.38$  & $99.8$ \\ \cline{2-6}
+    & \multicolumn{4}{r}{\textbf{average gap}}  & $\bf 99.1$  \\ \hline \hline
+\textbf{n}   & \textbf{m}  & \textbf{$\alpha$}    &\textbf{SCIP time (s)}& \textbf{SCE time (s)} & \textbf{gap (\%)} \\ \hline
+250 & 10 & 0.25 & $ 58.20$ & $  1.10$  & $97.2$ \\
+    &    & 0.50 & $  8.51$ & $  1.04$  & $98.9$ \\
+    &    & 0.75 & $  0.51$ & $  0.90$  & $99.7$ \\ \cline{2-6}
+    & 20 & 0.25 & $227.94$ & $  1.11$  & $97.6$ \\
+    &    & 0.50 & $ 43.69$ & $  1.02$  & $99.0$ \\
+    &    & 0.75 & $  1.59$ & $  0.90$  & $99.8$ \\ \cline{2-6}
+    & 30 & 0.25 & $270.48$ & $  1.20$  & $97.7$ \\
+    &    & 0.50 & $ 88.73$ & $  1.09$  & $99.0$ \\
+    &    & 0.75 & $  2.90$ & $  0.94$  & $99.8$ \\ \cline{2-6}
+    & \multicolumn{4}{r}{\textbf{average gap}}  & $\bf 98.7$  \\ \hline \hline
+\textbf{n}   & \textbf{m}  & \textbf{$\alpha$}    &\textbf{SCIP time (s)}& \textbf{SCE time (s)} & \textbf{gap (\%)} \\ \hline
+500 & 10 & 0.25 & $278.85$ & $  2.23$  & $96.1$ \\
+    &    & 0.50 & $177.32$ & $  2.14$  & $98.4$ \\
+    &    & 0.75 & $  8.47$ & $  1.87$  & $99.6$ \\ \cline{2-6}
+    & 20 & 0.25 & $284.11$ & $  2.30$  & $96.7$ \\
+    &    & 0.50 & $275.68$ & $  2.16$  & $98.6$ \\
+    &    & 0.75 & $ 33.67$ & $  1.90$  & $99.7$ \\ \cline{2-6}
+    & 30 & 0.25 & $283.78$ & $  2.50$  & $96.9$ \\
+    &    & 0.50 & $283.54$ & $  2.32$  & $98.7$ \\
+    &    & 0.75 & $ 71.66$ & $  1.96$  & $99.7$ \\ \cline{2-6}
+    & \multicolumn{4}{r}{\textbf{average gap}}  & $\bf 98.3$  \\ \hline
+\end{tabular}
+\end{center}
+}
+ \caption{SCE performance on the random generated problems.}
+ \label{tab:rand}
+\end{table}
+
+\begin{figure}
+  \includegraphics[scale=0.5]{imgs/iter}
+  \caption{Convergence process of SCE for MKP
+    for a problem with $n=500$, $m=30$ and $t=0.50$.}
+  \label{fig:iter}
+\end{figure}
+
+The fast convergence speed of SCE for MKP can be noticed in Fig.~\ref{fig:iter}.
+The figure shows for each iterations step, the quality of best solution found
+for the first $100$ iterations.
+The problem instance used was taken from the second set of problem (random instances).
+The best known solution was found with $600$s of execution on SCIP solver and
+the execution of the SCE algorithm expended $1.1$ seconds.
 
 \section{Conclusions and future remarks}
 \label{sec:conc}
-% Conseguiu alcançar soluções "near optimal"
+
+In this work we addressed the application of the shuffled complex
+evolution (SCE) to the multidimensional knapsack problem and investigated it
+performance through several computational experiments.
+
+The SCE algorithm, which combines the ideas of a controlled random search with
+the concepts of competitive evolution proved to be very effective in finding
+good solution for hard instances of MKP, demanding a very small amount of
+processing time to reach high quality solutions for MKP.
+
+Future work includes the investigation of different crossing procedures 
+and the use of local search in the process of evolving complexes.
 
 %\bibliographystyle{abbrv}
 \bibliographystyle{IEEEtran}
