--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -841,3 +841,24 @@ masid = {694811}
   publisher={Wiley Online Library}
 }
 
+@article{zhao2014shuffled,
+  title={A shuffled complex evolution algorithm with opposition-based learning for a permutation flow shop scheduling problem},
+  author={Zhao, Fuqing and Zhang, Jianlin and Wang, Junbiao and Zhang, Chuck},
+  journal={International Journal of Computer Integrated Manufacturing},
+  number={ahead-of-print},
+  pages={1--16},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
+
+@article{elbeltagi2007modified,
+  title={A modified shuffled frog-leaping optimization algorithm: applications to project management},
+  author={Elbeltagi, Emad and Hegazy, Tarek and Grierson, Donald},
+  journal={Structure and Infrastructure Engineering},
+  volume={3},
+  number={1},
+  pages={53--60},
+  year={2007},
+  publisher={Taylor \& Francis}
+}
+
