ICTAI2015-2, começando coreMKP

--- a/doc/pubs/ICTAI20152/tex/core.tex
+++ b/doc/pubs/ICTAI20152/tex/core.tex
@@ -1,1 +1,14 @@
-% falar sobre o que é core...
+The core concept was first presented for the well-known 0-1 knapsack problem (KP),
+leading to very successful KP algorithms.
+The main idea is to reduce the original problem by only considering a core of
+items for which it is hard to decide if they will occur in an optimal solution
+or not, whereas the variables for all items outside the core are fixed to certain values.
+
+- Eficieny measure...
+
+- the core problem (KPC)
+
+- core concept for MKP
+  - Efficiency measure... (sketch...) the dual efficieny measure
+  - the Multidimentional kanspack core problem (MKPC)
+
