--- a/doc/pubs/ICTAI20152/tex/paper.tex
+++ b/doc/pubs/ICTAI20152/tex/paper.tex
@@ -24,7 +24,7 @@
 \begin{document}
 
 \title{A shuffled complex evolution algorithm for
-the multidimensional knapsack problem}
+the multidimensional knapsack problem using core concept}
 
 \author{\IEEEauthorblockN{Marcos Daniel Valad\~ao Baroni}
 \IEEEauthorblockA{ Departamento de Inform\'atica\\
@@ -45,12 +45,15 @@ Email: fvarejao@ninfa.inf.ufes.br }
 This work addresses the application of
 a population based evolutionary algorithm
 called shuffled complex evolution (SCE) in the multidimensional knapsack
-problem.
+core problem.
+The core of the multidimensional knapsack problem is a set of items which are
+hard to decide if they are or not selected in good solutions.
+The core concept is used to reduce the original problem size.
 The SCE regards a natural evolution happening simultaneously in independent communities.
 The performance of the SCE algorithm is verified through computational experiments
 using well-known problems from literature and randomly generated problem as well.
-The SCE proved to be very effective in finding good solutions demanding a
-very small amount of processing time.
+The SCE applied to the core problem proved to be very effective in finding near
+optimal solutions demanding a very small amount of processing time.
 
 \end{abstract}
 \IEEEpeerreviewmaketitle
